2008-08-25  Johan Dahlin  <johan@flumotion>

	* common/common.mk (check-local-pep8): Add --repeat here, so we
	can see more than just the first error.

2008-08-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/config.py:
	  Add some newlines to serialization around flows/atmosphere and
	  components so the structure of the XML is visually clear again.

2008-08-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/audiotest/audiotest.xml:
	* flumotion/component/producers/videotest/videotest.xml:
	  Update descriptions to talk about example and demonstration.
	  See #1090.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/admin/gtk/componentlist.py:
	  Instead of only removing locally added messages in the current
	  admin client, make sure that all admin clients remove their
	  locally added messages any time a component goes to sleeping.
	  Thanks to Arek for the suggestion.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/baseadminnode.py:
	  When there is a component UI error in a tab, say which tab.
	  When the error is because the component's Node still uses glade_file
	  then warnings.warn and show a component warning message, but
	  still work.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/baseadminnode.py:
	  Make the TypeError clearer by saying which method is responsible
	  for the bug.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/adminwindow.py:
	  Make sure that, when you stop a component, all client-side messages
	  are cleared from the state, so that the UI can remove them when
	  the component is sleeping.  This got broken again recently, please
	  take care when rewriting UI code.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>
